# spa-crawler

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pysentry.toml  CODE_OF_CONDUCT.md  Caddyfile  Dockerfile  Dockerfile.spa  Dockerfile.spa-crawler  Makefile  README.md  docker-compose.spa.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
spa_crawler/: __main__.py  assets_mirror.py  cli.py  config.py  constants.py  crawler.py  js_scripts.py  logging.py  main.py  page_ops.py  redirects.py  url_discovery.py  utils.py
spa_crawler/js/: dismiss_overlays.js  extract_page_urls.js
tests/: test_assets_mirror.py  test_cli.py  test_config.py  test_config_logging_js.py  test_crawler.py  test_main_module.py  test_page_ops.py  test_redirects.py  test_url_discovery.py  test_utils.py
