[project]
name = "spa-crawler"
version = "0.0.1"
description = "A CLI-friendly crawler that can optionally log in, crawl a website, and mirror pages and static assets into a local directory so the result can be served by a static web server (Caddy, etc.)"
requires-python = ">=3.13,<4.0"
readme = "README.md"

dependencies = ["crawlee[playwright]", "typer>=0.24.1", "yarl>=1.23.0"]

[dependency-groups]
dev = [
  "prek>=0.3.8",
  "pysentry-rs>=0.4.3",
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.8",
  "ty>=0.0.26",
]

[tool.uv]
link-mode = "copy"

[tool.pytest.ini_options]
addopts = "--cov=spa_crawler --cov-report=term-missing --cov-fail-under=95"

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG", "PL", "RUF"]
extend-ignore = ["RUF001", "PLR0911", "PLR0912", "PLR0913", "PLR0915"]

[tool.ruff.lint.isort]
known-first-party = ["spa_crawler"]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
